# slime

./: .gitmodules  CMakeLists.txt
cmake/: FindKernelBuild.cmake
script/: debug.py  kernel_config.sh  rootfs.sh
src/kernel/: Kbuild.in  config.h.in  loader.c  slime.lds
src/kernel/include/: hide_dir.h  loader.h
src/kernel/modules/: hide_dir.c
